[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["tshura <tasha19_98@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
click = "^8.1.3"
sklearn = "^0.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "forest_ml.train:train"
kaggle = "forest_ml.kaggle:kaggle"
